--- a/wp-content/themes/custom/assets/scss/preon/config/_breakpoints.scss
+++ b/wp-content/themes/custom/assets/scss/preon/config/_breakpoints.scss
@@ -1,7 +1,7 @@
 $breakpoints: (
-    's': only screen and (min-width: 360px),
-    'ns': only screen and (min-width: 600px),
-    'm': only screen and (min-width: 768px),
-    'l': only screen and (min-width: 996px),
-    'xl': only screen and (min-width: 1200px)
+    's': "only screen and (min-width: 360px)",
+    'ns': "only screen and (min-width: 600px)",
+    'm': "only screen and (min-width: 768px)",
+    'l': "only screen and (min-width: 996px)",
+    'xl': "only screen and (min-width: 1200px)"
 );
